fix(dashboard): update background colors and refine body overflow properties

--- a/src/routes/g/[guildid]/dashboard.css
+++ b/src/routes/g/[guildid]/dashboard.css
@@ -24,10 +24,15 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: var(--color-base-300);
+    background-color: transparent;
     padding: 0.75rem;
     border-radius: var(--radius-box);
     min-height: calc(100%);
+  }
+
+  body {
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
 }
 
@@ -43,7 +48,7 @@
     flex-direction: row;
     gap: 0.5rem;
     align-items: center;
-    background-color: var(--color-base-200);
+    background-color: color-mix(in oklab, var(--color-base-200), var(--color-bg) 50%);
     z-index: 100;
   }
 
